RESOLVED FIXED 242028
drawBuffersWEBGL generates incorrect error code
https://bugs.webkit.org/show_bug.cgi?id=242028
Summary drawBuffersWEBGL generates incorrect error code
Alexey Knyazev
Reported 2022-06-27 06:55:25 PDT
When the function argument is incorrect, the call must generate INVALID_OPERATION, not INVALID_VALUE, which is reserved for the overflow case.
Attachments
EWS
Comment 1 2022-06-28 07:53:48 PDT
Committed 251910@main (dccb2b202e36): <https://commits.webkit.org/251910@main> Reviewed commits have been landed. Closing PR #1817 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2022-06-28 07:54:13 PDT
Note You need to log in before you can comment on or make changes to this bug.